--- a/project/package.json
+++ b/project/package.json
@@ -4,9 +4,10 @@
   "description": "Onbe Bootcamp Training Materials",
   "main": "index.js",
   "scripts": {
-    "build": "npm run hugo:build",
+    "build": "npm run submodule:build && npm run hugo:build",
     "clean": "npm run hugo:clean",
     "serve": "npm run hugo:serve",
+    "submodule:build": "git submodule update --init --recursive --depth 1",
     "hugo:build": "hugo -d build",
     "hugo:serve": "hugo server",
     "hugo:clean": "shx rm -rf build resources/_gen public dist && shx echo Done",
