--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "devDependencies": {
     "autoprefixer": "^10.3.1",
     "hugo-extended": "^0.86.1",
-    "postcss-cli": "^8.3.1",
     "shx": "^0.3.3"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.4.1"
+    "bootstrap-sass": "^3.4.1",
+    "postcss-cli": "^8.3.1"
   }
 }
